--- a/Project.vcxproj
+++ b/Project.vcxproj
@@ -178,12 +178,15 @@
     <ClInclude Include="Data\Classes\Header\Block.h" />
     <ClInclude Include="Data\Classes\Header\Button.h" />
     <ClInclude Include="Data\Classes\Header\DrawTextureData.h" />
+    <ClInclude Include="Data\Classes\Header\Enemy.h" />
+    <ClInclude Include="Data\Classes\Header\Item.h" />
     <ClInclude Include="Data\Classes\Header\KeyEvent.h" />
     <ClInclude Include="Data\Classes\Header\Objectile.h" />
     <ClInclude Include="Data\Classes\Header\PC.h" />
     <ClInclude Include="Data\Classes\Header\Player.h" />
     <ClInclude Include="Data\Classes\Header\Menu.h" />
     <ClInclude Include="Data\Classes\Header\SceneControlData.h" />
+    <ClInclude Include="Data\Classes\Header\Spawner.h" />
     <ClInclude Include="Data\Classes\Header\Stage.h" />
     <ClInclude Include="Data\Classes\Header\TerrainObject.h" />
     <ClInclude Include="Data\Classes\Header\WindowsControlData.h" />
@@ -216,12 +219,15 @@
     <ClCompile Include="Data\Classes\Sourse\Block.cpp" />
     <ClCompile Include="Data\Classes\Sourse\Button.cpp" />
     <ClCompile Include="Data\Classes\Sourse\DrawTextureData.cpp" />
+    <ClCompile Include="Data\Classes\Sourse\Enemy.cpp" />
+    <ClCompile Include="Data\Classes\Sourse\Item.cpp" />
     <ClCompile Include="Data\Classes\Sourse\KeyEvent.cpp" />
     <ClCompile Include="Data\Classes\Sourse\Objectile.cpp" />
     <ClCompile Include="Data\Classes\Sourse\PC.cpp" />
     <ClCompile Include="Data\Classes\Sourse\Player.cpp" />
     <ClCompile Include="Data\Classes\Sourse\Menu.cpp" />
     <ClCompile Include="Data\Classes\Sourse\SceneControlData.cpp" />
+    <ClCompile Include="Data\Classes\Sourse\Spawner.cpp" />
     <ClCompile Include="Data\Classes\Sourse\Stage.cpp" />
     <ClCompile Include="Data\Classes\Sourse\TerrainObject.cpp" />
     <ClCompile Include="Data\Classes\Sourse\WindowsControlData.cpp" />
