--- a/Project.vcxproj.filters
+++ b/Project.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClInclude Include="Data\Classes\Header\Block.h" />
     <ClInclude Include="Src\Application\Direction.h" />
     <ClInclude Include="Data\Classes\Header\Stage.h" />
+    <ClInclude Include="Data\Classes\Header\Enemy.h" />
+    <ClInclude Include="Data\Classes\Header\Spawner.h" />
+    <ClInclude Include="Data\Classes\Header\Item.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Pch.cpp">
@@ -232,6 +235,9 @@
     <ClCompile Include="Data\Classes\Sourse\TerrainObject.cpp" />
     <ClCompile Include="Data\Classes\Sourse\Block.cpp" />
     <ClCompile Include="Data\Classes\Sourse\Stage.cpp" />
+    <ClCompile Include="Data\Classes\Sourse\Enemy.cpp" />
+    <ClCompile Include="Data\Classes\Sourse\Spawner.cpp" />
+    <ClCompile Include="Data\Classes\Sourse\Item.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="説明.txt" />
